# cherab_inversion

./: .dprint.jsonc  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  dev.py  environment.yaml  meson.build  pixi.toml  pyproject.toml  typos.toml
.binder/: environment.yml
.github/workflows/: build_dist.yml  ci.yaml  deploy-pypi.yml  pytest.yaml  python-publish.yml
cherab/inversion/: __init__.py  core.py  derivative.py  derivative.pyx  gcv.py  inversion.py  lcurve.py  meson.build  mfr.py
cherab/inversion/tests/: conftest.py  meson.build  test_core.py  test_derivative.py  test_mfr.py
cherab/inversion/tools/: __init__.py  meson.build  scientific_format.py  spinner.py
cherab/inversion/tools/tests/: test_derivative.py  test_spinner.py
docs/notebooks/: L_curve.ipynb
docs/notebooks/iterative/: 01-mfr-tomography.ipynb  02-mfr-aniso-smoothing.ipynb  03-melm.ipynb  mfr-tomography.ipynb  raytransfer_grid_data.pickle
docs/notebooks/non-iterative/: L_curve.ipynb  compare_criteria.ipynb  gcv.ipynb  lcurve_vs_gcv.ipynb
docs/notebooks/others/: derivative_operator.ipynb
docs/scripts/: derivative_cylindrical.py  derivative_gradient.py
docs/source/: api.md  api.rst  conf.py  contributing.md  examples.md  examples.rst  index.md  index.rst  intro.md  references.bib
docs/source/_static/: custom.css  switcher.json
docs/source/_templates/: attribute.rst  class.rst  method.rst  module.rst
docs/source/theory/: derivative.md  gcv.md  index.md  inversion.md  lcurve.md  mfr.md  mlem.md  press.md
docs/source/user/: citation.rst  contribution.rst  index.rst  installation.rst  quickstart.rst
docs/source/user/theory/: derivative.ipynb  gcv.ipynb  index.rst  inversion.ipynb  lcurve.ipynb  mfr.ipynb  press.ipynb
scripts/: build_dist.sh
src/cherab/inversion/: __init__.py  core.py  mfr.py
src/cherab/inversion/bayesian/: __init__.py
src/cherab/inversion/data/: __init__.py  bolo.npz
src/cherab/inversion/regularization/: __init__.py  _base.py  _mfr.py  _svd.py  _tsvd.py  utility.py
src/cherab/inversion/regularization/criteria/: __init__.py  _base.py  _gcv.py  _lcurve.py  _press.py
src/cherab/inversion/statistical/: __init__.py  _mlem.py
src/cherab/inversion/tools/: __init__.py  _derivative.py  scientific_format.py  spinner.py
tests/: test_derivative.py
tests/bayesian/: test_bayesian.py
tests/data/: test_data.py
tests/regularization/: test_mfr.py  test_svd_base.py  test_tsvd.py
tests/regularization/criteria/: test_gcv.py  test_lcurve.py  test_press.py
tests/statistical/: test_mlem.py
tests/tools/: test_derivative.py
