[build-system]
requires = [
    "wheel",
    "numpy",
    "meson-python < 0.16",            # v0.16 has a error in install
    # "cython >= 3.0",
    "tomli; python_version < '3.11'",
]
build-backend = "mesonpy"

[project]
name = "cherab-inversion"
description = "Cherab inversion framework"
version = "0.3.0.dev"
readme = "README.md"
authors = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
maintainers = [
    { name = "Koyo Munechika", email = "munechika.koyo@torus.nr.titech.ac.jp" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">= 3.9, < 3.13"
dependencies = ["numpy", "scipy", "matplotlib", "scikit-sparse"]
license = { file = "LICENSE.md" }

[project.optional-dependencies]
docs = [
    "docutils",
    "ipykernel",
    "ipywidgets",
    "jinja2 < 3.2",
    "nbconvert >= 7.3",
    "nbsphinx",
    "numpydoc",
    "pillow",
    "pygments >= 2.11.0",
    "sphinx < 8.0",
    "sphinx-prompt",
    "sphinx-copybutton",
    "pydata-sphinx-theme < 0.16",
    "sphinx-design",
    "pandoc",
    "sphinx-codeautolink",
    "sphinx-github-style",
    "sphinxcontrib-bibtex",
]
dev = [
    "tomli; python_version < '3.11'",
    "ipython",
    "black",
    "ruff",
    "mypy",
    "rich-click",
    # "cython-lint",
    "pre-commit",
    # "cython >= 3.0",
    "meson-python < 0.16",
    "pytest",
]
all = ["cherab-inversion[docs]", "cherab-inversion[dev]"]

[project.urls]
Homepage = "https://cherab-inversion.readthedocs.io/"
documentation = "https://cherab-inversion.readthedocs.io/"
repository = "https://github.com/munechika-koyo/cherab_inversion"

# [tool.cython-lint]
# max-line-length = 140

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "W", "I", "N", "B", "NPY"]
ignore = ["E501", "N802", "N803", "N806"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["E", "F", "W", "I", "B", "NPY"]
unfixable = ["E501"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

# namespace package setting
namespace-packages = ["cherab/inversion"]

[tool.ruff.per-file-ignores]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
follow-imports = "silent"
ignore-missing-imports = true
show-column-numbers = true
no-pretty = true

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = false

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "GL01", # Docstring text (summary) should start in the line immediately
    "EX01", # No examples section foun
    "SA01", # See Also section not found
    "ES01", # No extended summary found
    "GL08", # The object does not have a docstring
    "RT01", # No Returns section found
    "PR01", # Parameters {missing_params} not documented
    "SS06", # Summary should fit in a single line
]
# remember to use single quotes for regex in TOML
exclude = [ # don't report on objects that match any of these regex
    '\.__repr__$',
]
override_SS05 = ['^Process ', '^Assess ', '^Access ']

[tool.cibuildwheel]
skip = "pp* *_ppc64le *_i686 *_s390x"
build-frontend = "build"
test-requires = "pytest"
test-command = "pytest --pyargs cherab.inversion"

[tool.cibuildwheel.linux]
before-all = "yum install -y suitesparse-devel"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add suitesparse-dev"

[tool.cibuildwheel.macos]
before-all = ["brew install suite-sparse"]
[tool.cibuildwheel.macos.environment]
CC = "gcc-12"
CXX = "gcc-12"
SUITESPARSE_INCLUDE_DIR = "$(brew --prefix suite-sparse)/include"
SUITESPARSE_LIBRARY_DIR = "$(brew --prefix suite-sparse)/lib"
