[build-system]
requires = ["hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "cherab-inversion"
description = "Cherab inversion framework"
authors = [{ name = "munechika-koyo", email = "munechika.koyo@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
keywords = [
  "cherab",
  "inversion",
  "tomography",
  "mathematics",
  "regularization",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy", "scipy", "matplotlib", "scikit-sparse", "rich"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pooch"]

[project.urls]
Homepage = "https://cherab-inversion.readthedocs.io/"
documentation = "https://cherab-inversion.readthedocs.io/"
repository = "https://github.com/munechika-koyo/cherab_inversion"

# ----------------------
# === Version config ===
# ----------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.vcs]

# ----------------------------
# === Build/Package config ===
# ----------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/cherab"]

# -----------------------
# === Cov/Test config ===
# -----------------------
[tool.coverage.run]
source_pkgs = ["cherab.inversion"]
branch = true
parallel = true

[tool.coverage.paths]
test = ["src/test", "*/test/src/test"]
tests = ["tests", "*/test/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov='cherab.inversion' --cov-report term-missing --no-cov-on-fail"


# ------------------------------
# === Lint & Format settings ===
# ------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "B",   # flake8-bugbear
  "F",   # pyflakes
  "I",   # isort (import order)
  "N",   # pep8-naming
  "W",   # Warning
  "UP",  # pyupgrade
  "NPY", # numpy specific rules
  "D",   # pydocstyle
  "DOC", # pydoclint
]
preview = true
ignore = [
  # Recommended ignores by ruff when using formatter
  "E501", # line too long
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
  "D107", # missing docstring in __init__
]

[tool.ruff.lint.isort]
known-first-party = ["cherab"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["T", "U", "B", "Q", "plot_L_curve"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
  "W292",
  "D",
  "DOC",
] # no newline at end of file and skip docstring checks
"tests/**" = ["D", "DOC"] # skip docstring checks in tests

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

# ------------------------------
# === Type checking settings ===
# ------------------------------
[tool.pyrefly]
project-includes = ["src"]
